Make width only 90%

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   
   <body>
     <div style="width: 56.25vh; height: 100vh; margin: auto;">
-		<div id="unityContainer" style="width: 100%; height: 90%; margin: auto;"></div>
-		<div style="height: 100px; width: 100%; margin: auto; display: flex; justify-content: center;">
+		<div id="unityContainer" style="width: 90%; height: 90%; margin: auto;"></div>
+		<div style="height: 100px; width: 90%; margin-right: 10%; display: flex; justify-content: center;">
 			<a href='https://play.google.com/store/apps/details?id=com.MitchellMay.CrossCribbage&hl=en_US&gl=US&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
 				<img style="height: 80px; width: auto;" alt='Get it on Google Play' src='AndroidBadge.png'/>
             </a>
