--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
   
   <body>
     <div style="width: 56.25vh; height: 100vh; margin: auto;">
-		<div id="unityContainer" style="width: 90%; height: 90%; margin: auto;"></div>
-		<div style="height: 100px; width: 90%; margin-right: 10%; display: flex; justify-content: center;">
-			<a href='https://play.google.com/store/apps/details?id=com.MitchellMay.CrossCribbage&hl=en_US&gl=US&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-				<img style="height: 80px; width: auto;" alt='Get it on Google Play' src='AndroidBadge.png'/>
-            </a>
-            <a href='https://apps.apple.com/us/app/cross-cribbage/id1540640821#?platform=iphone'>
-				<img style="height: 80px; width: auto;" alt='Get it on the App Store' src='AppleBadge.png'/>
-			</a>
-		</div>
-	</div>
+      <div id="unityContainer" style="width: 90%; height: 90%; margin: auto;"></div>
+      <div style="height: 100px; width: 90%; margin-right: 10%; display: flex; justify-content: center;">
+        <a href='https://play.google.com/store/apps/details?id=com.MitchellMay.CrossCribbage&hl=en_US&gl=US&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+          <img style="height: 80px; width: auto;" alt='Get it on Google Play' src='AndroidBadge.png'/>
+              </a>
+              <a href='https://apps.apple.com/us/app/cross-cribbage/id1540640821#?platform=iphone'>
+          <img style="height: 80px; width: auto;" alt='Get it on the App Store' src='AppleBadge.png'/>
+        </a>
+      </div>
+      <div style="height: 30px; width: 90%; margin-right: 10%; display: flex; justify-content: center;">
+        <a href='https://sites.google.com/view/crosscribbageapp/privacy-policy' target="_blank">Privacy Policy</a>
+      </div>
+	  </div>
   </body>
   
 </html>
