Add description and better title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Cross Cribbage</title>
+    <meta 
+      name="description"
+      content="Play Cross Cribbage (Table Top Cribbage) online! Play against the computer or a friend."
+    >
+    <title>Play Cross Cribbage</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
     var unityInstance = UnityLoader.instantiate("unityContainer", "Build/HTML.json");
