--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content="Play Cross Cribbage (Table Top Cribbage) online! Play against the computer or a friend."
     >
     <title>Play Cross Cribbage</title>
+	<link rel="shortcut icon" type="image/png" href="logo.png"/>
     <script src="Build/UnityLoader.js"></script>
     <script>
     var unityInstance = UnityLoader.instantiate("unityContainer", "Build/HTML.json");
